--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^0.27.2",
     "expo": "~44.0.0",
     "expo-font": "^10.0.5",
+    "expo-notifications": "~0.14.0",
+    "expo-permissions": "~13.1.0",
     "expo-updates": "~0.11.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
